apps/nse-monitor/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nse-monitor
  namespace: default
spec:
  selector:
    app: nse-monitor
  ports:
    - port: 9731
      targetPort: 9731
